[package]
name = "bakin-rbr-converter"
version = "0.1.0"
edition = "2024"

[dependencies]
binrw = "0.14.1"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.3"
hex = "0.4.3"
hex-literal = "1.0.0"
leb128 = "0.2"
serde = {version = "1.0.219",features = ["derive"]}
serde_json = "1.0.140"
indicatif = "0.17.11"


